# toddler-roku

./: .gitignore  BUNNY_CDN_SETUP.md  CHANGES.md  CLAUDE.md  CODEBASE_AUDIT.md  NETLIFY_QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  app-release-signed.apk.idsig  app.js  app.js.backup  claude-review.md  cleanup-govee-phase2.ps1  cleanup-govee-phase3.ps1  cleanup-govee.ps1  codex-suggestions.md  index.html  lights.html  lights.js  netlify.toml  package-lock.json  package.json  toddler-content.json  vitest.config.js
.claude/: settings.local.json
netlify/: .gitignore  DEPLOY_NOTE.md  README.md  init-config.js
netlify/functions/: auth-helper.js  ble-devices.js  config-import.js  config-list.js  config.js  govee-devices.js  image-list.js  image-upload.js  package-lock.json  package.json
netlify/public/: editor.html  index.html  test-auth.html
netlify/public/admin/: index.html
public/: editor.html
public/config/: app-config.json  button-types.json  rooms.json
public/config/toddler/: default.json
scripts/: build-release-artifacts.ps1  build.js
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/bridges/: govee.rs  mod.rs  network.rs  roku.rs  roomsense.rs
src/constants/: roku-apps.js
src/modules/: content.js  content.test.js  govee.js  macros.js  macros.test.js  roku.js  rooms.js  rooms.test.js  ui.js
src/utils/: errors.js  state.js  storage.js
